--- a/view/login.phtml
+++ b/view/login.phtml
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="img/LOGO1.png" alt="logo studia" class="logo">
+    </header>
     <form method="POST">
         <label for="name">Uživatelské jméno: </label>
         <input type="text" name="name" id="name">
@@ -20,6 +23,11 @@
         <input type="password" name="password" id="password">
         <input type="submit" value="Přihlásit se">
     </form>
+    <footer>
+        <ul class="odkaz">
+            <li>Matěj Bartusek, m.bartusek.st@spseiostrava<a href="img/tf.jpg" target="_blank">.</a>cz, 13. 6. 2022</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
