--- a/view/login.phtml
+++ b/view/login.phtml
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" type="image/jpg" href="img/mcu.ico" />
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/login.css">
     <title>MCU</title>
 </head>
 
@@ -17,10 +18,10 @@
         <img src="img/LOGO1.png" alt="logo studia" class="logo">
     </header>
     <form method="POST">
-        <label for="name">Uživatelské jméno: </label>
-        <input type="text" name="name" id="name">
-        <label for="password">Heslo: </label>
-        <input type="password" name="password" id="password">
+        <label for="name">Uživatelské jméno: </label><br>
+        <input type="text" name="name" id="name"><br>
+        <label for="password">Heslo: </label><br>
+        <input type="password" name="password" id="password"><br>
         <input type="submit" value="Přihlásit se">
     </form>
     <footer>
