--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,8 @@ body{
     margin-right: auto;
     width: 40%;
 }
+footer{
+    position: absolute !important;
+    bottom: 0 !important;
+    width: 100% !important;
+}
