--- a/style/login.css
+++ b/style/login.css
@@ -1,5 +1,5 @@
 footer{
-    position: fixed !important;
+    position: absolute !important;
     bottom: 0 !important;
     width: 100% !important;
 }
