--- a/view/login.phtml
+++ b/view/login.phtml
@@ -7,27 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="img/mcu.ico" />
-    <link rel="stylesheet" href="style/login.css">
+    <link rel="stylesheet" href="style/bootstrap.css">
+    <link rel="stylesheet" href="style/account.css">
     <link rel="stylesheet" href="style/header.css">
     <title>MCU</title>
 </head>
 
 <body>
-    <header>
-        <img src="img/LOGO1.png" alt="logo studia" class="logo">
-    </header>
-    <form method="POST">
-        <label for="name">Uživatelské jméno: </label><br>
-        <input type="text" name="name" id="name"><br>
-        <label for="password">Heslo: </label><br>
-        <input type="password" name="password" id="password"><br>
-        <input type="submit" value="Přihlásit se">
-    </form>
-    <footer>
-        <ul class="odkaz">
-            <li>Matěj Bartusek, m.bartusek.st@spseiostrava<a href="img/tf.jpg" target="_blank">.</a>cz, 13. 6. 2022</li>
-        </ul>
-    </footer>
+    <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark">
+          <div id="color">
+            <div class="card-body p-5 text-center">
+              <form method="POST">
+                <div class="mb-md-5 mt-md-4 pb-5">
+
+                  <h2 class="fw-bold mb-2">PŘIHLÁŠENÍ</h2>
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="name">Uživatelské jméno</label>
+                    <input type="text" name="name" id="name" class="form-control form-control-lg">
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="password">Heslo</label>
+                    <input type="password" name="password" id="password" class="form-control form-control-lg">
+                  </div>
+                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Přihlásit se</button>
+            </div></form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
